--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "react-router dev",
+    "build": "react-router build",
+    "start": "react-router-serve ./build/server/index.js"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0",
+    "@react-router/node": "^7.1.3",
+    "@react-router/serve": "^7.1.3",
+    "isbot": "^5.1.17",
     "lucide-react": "^0.562.0",
-    "js-yaml": "4.1.0",
-    "smol-toml": "1.1.3",
-    "marked": "12.0.0"
+    "marked": "^12.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router": "^7.1.3",
+    "smol-toml": "^1.1.3"
   },
   "devDependencies": {
+    "@react-router/dev": "^7.1.3",
+    "@tailwindcss/vite": "^4.0.0",
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
